--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "complex-pixi",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "PixiJS implementation for ComplexJS",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/faebeee/complex-pixi.git"
+    "url": "git+https://github.com/complexjs/complex-pixi.git"
   },
+  "main" : "Pixi.js",
   "keywords": [
     "ComplexJS",
     "Game",
@@ -19,14 +20,13 @@
     "engine",
     "complex"
   ],
-  "devDependencies": {
-    "gulp": ">= x",
-    "gulp-concat": ">= x"
+  "dependencies": {
+    "pixi": "^0.3.0"
   },
   "author": "Faebeee",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/faebeee/complex-pixi/issues"
+    "url": "https://github.com/complexjs/complex-pixi/issues"
   },
-  "homepage": "https://github.com/faebeee/complex-pixi#readme"
+  "homepage": "https://github.com/complexjs/complex-pixi#readme"
 }
