--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "complex-pixi",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "PixiJS implementation for ComplexJS",
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "gulp": "^3.9.1",
     "gulp-jsdoc3": "^0.3.0",
     "pixi.js": "^3.0.0"
+  },
+  "scripts": {
+      "doc": "gulp doc"
   },
   "author": "Faebeee",
   "license": "ISC",
